# led-mesh-toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PRODUCT.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: m2-sidecar-build.yml  visual-ci.yml
crates/adapter-total-station/: Cargo.toml  README.md
crates/adapter-total-station/src/: builder.rs  error.rs  geometric_naming.rs  lib.rs  project.rs  raw_point.rs  reference_frame.rs  report_builder.rs  scatter_csv.rs  shape_grid.rs  transform.rs
crates/adapter-total-station/src/instruction_card/: html.rs  mod.rs  pdf.rs
crates/adapter-total-station/tests/: builder_test.rs  csv_test.rs  end_to_end.rs  error_test.rs  fallback_test.rs  geometric_naming_test.rs  instruction_html_test.rs  instruction_pdf_test.rs  project_test.rs  raw_point_test.rs  reference_frame_test.rs  report_builder_test.rs  report_test.rs  shape_grid_test.rs  transform_test.rs
crates/adapter-visual-ba/: Cargo.toml
crates/adapter-visual-ba/src/: api.rs  error.rs  ipc.rs  lib.rs  locate.rs  sidecar.rs
crates/adapter-visual-ba/tests/: api_test.rs  cancel_test.rs  e2e_real_binary_test.rs  ipc_roundtrip_test.rs  locate_test.rs  pattern_meta_v2_test.rs  poc_compare_test.rs  sidecar_e2e_test.rs  simulate_eval_test.rs
crates/adapter-visual-ba/tests/fixtures/: mock_sidecar.sh  mock_sidecar_slow.sh  mock_sidecar_with_point.sh
crates/core/: Cargo.toml  README.md
crates/core/src/: coordinate.rs  lib.rs  measured_points.rs  shape.rs  surface.rs  uncertainty.rs  uv.rs  weld.rs
crates/core/src/export/: adapt.rs  build.rs  mod.rs  obj.rs  targets.rs
crates/core/src/reconstruct/: boundary_interp.rs  direct.rs  mod.rs  nominal.rs  radial_basis.rs
crates/core/src/reconstruct/surface_fit/: fit.rs  frame.rs  mod.rs  project.rs  resample.rs
crates/core/tests/: coordinate_test.rs  end_to_end.rs  export_adapt_test.rs  export_build_test.rs  export_obj_test.rs  export_targets_test.rs  measured_points_test.rs  point_test.rs  reconstruct_boundary_test.rs  reconstruct_direct_test.rs  reconstruct_dispatch_test.rs  reconstruct_nominal_test.rs  reconstruct_radial_test.rs  shape_test.rs  surface_test.rs  triangulate_test.rs  uncertainty_test.rs  uv_test.rs  weld_test.rs
crates/lmt-app/: Cargo.toml
crates/lmt-app/src/: export.rs  lib.rs  measurements.rs  projects.rs  reconstruct.rs  total_station.rs  total_station_mapper.rs  visual.rs
crates/lmt-app/src/templates/: capture_card_3d.html
crates/lmt-cli/: Cargo.toml
crates/lmt-cli/src/: cli.rs  main.rs  output.rs
crates/lmt-cli/src/commands/: completion.rs  export.rs  manifest.rs  measurements.rs  mod.rs  project.rs  reconstruct.rs  schema_cmd.rs  seed.rs  total_station.rs  util.rs  version.rs  visual.rs
crates/lmt-cli/tests/: cli_e2e.rs
crates/lmt-shared/: Cargo.toml
crates/lmt-shared/src/: dto.rs  envelope.rs  error.rs  exit_codes.rs  lib.rs  manifest.rs  schema.rs
crates/lmt-shared/src/data/: connection.rs  recent_projects.rs  runs.rs  schema.rs
docs/: CLI_DESIGN_SPEC.md  CLI运行流程.md  IR-FROZEN.md  LED_ScreenModelCal_Dual_Mode_Scheme.md  VP-QSP-quick-screen-fit-design.md  agents-cli.md  contract-manifest.json  core-fixes-execution-plan.md  features-overview.html  features-overview2.html  measurement-instrument-comparison.md  precision-scan-improvement-plan.md  roadmap-phase2-3-revision.md
docs/poc/: 2026-05-27-monitor-bench-report.md  2026-XX-XX-m2-poc-report-template.md  PART_A_DONE_README.md  monitor-bench-report-template.md
docs/superpowers/plans/: 2026-05-10-m0-rust-core.md  2026-05-11-led-mesh-toolkit-m0.2.md  2026-05-11-m1-total-station-adapter.md  2026-05-14-ia-redesign-method-split.md  2026-05-14-m1-gui-integration.md  2026-05-24-lmt-cli-feature-complete.md  2026-05-24-surface-fit-reconstruct.md  2026-05-25-camera-branch-rework.md  2026-05-26-per-cabinet-charuco-and-marker-routing.md  2026-05-28-disguise-canonical-export.md  (+12 more)
examples/curved-arc/: project.yaml
python-sidecar/: .gitignore  build_exe.ps1  build_exe.sh
python-sidecar/schema/: ipc.schema.json
python-sidecar/tests/: _dpx_fixtures.py  conftest.py  test_ba.py  test_calibrate.py  test_calibrate_sl.py  test_calibrate_sl_ipc.py  test_capture_planner_cmd.py  test_capture_planner_gates.py  test_capture_planner_geometry.py  test_capture_planner_optimize.py  test_capture_planner_scoring.py  test_capture_planner_seed.py  test_capture_planner_visibility.py  test_detect.py  test_dpx.py  test_eval_matrix.py  test_evaluate.py  test_generate_pattern_e2e.py  test_generate_structured_light.py  test_intrinsics_solve.py  test_ipc.py  test_local_mm_per_cabinet.py  test_main_dispatch.py  test_model_constrained_ba.py  test_nominal.py  test_nominal_dot_positions.py  test_pattern.py  test_reconstruct.py  test_screen_mapping.py  test_simulate.py  test_sl_decode.py  test_sl_feasibility.py  test_sl_reconstruct.py  test_vpqsp_detect.py  test_vpqsp_layout.py  test_vpqsp_pattern.py  test_vpqsp_reconstruct.py  test_vpqsp_selfcal.py
src/: App.vue  env.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: dto.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: export.rs  measurements.rs  mod.rs  projects.rs  reconstruct.rs  total_station.rs  total_station_mapper.rs
src-tauri/src/data/: connection.rs  mod.rs  recent_projects.rs  runs.rs
src-tauri/src/pdf_render/: macos.rs  mod.rs  windows.rs
src-tauri/tests/: dto_yaml_roundtrip.rs  export_obj_e2e.rs  full_pipeline_e2e.rs  measurements_yaml.rs  project_yaml.rs  reconstruct_e2e.rs  runs_listing.rs  seed_example.rs  total_station_test.rs
src/composables/: useColorMode.ts  useLocale.ts  useSurveyMethod.ts
src/locales/: en.json  index.ts  zh.json
src/router/: index.ts
src/services/: tauri.ts
src/stores/: currentProject.ts  editor.ts  projects.ts  reconstruction.ts  ui.ts
src/views/: Charuco.vue  Design.vue  Export.vue  Home.vue  Import.vue  Instruct.vue  Method.vue  Photoplan.vue  Preview.vue  Runs.vue
(+104 files in other folders)
