[package]
name = "lmt-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LED Mesh Toolkit Tauri backend"

[lib]
name = "lmt_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
lmt-core = { path = "../crates/core" }
lmt-adapter-total-station = { path = "../crates/adapter-total-station" }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
