[package]
name = "lmt-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LED Mesh Toolkit Tauri backend"

[lib]
name = "lmt_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
lmt-core = { path = "../crates/core" }
lmt-adapter-total-station = { path = "../crates/adapter-total-station" }
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
chrono.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSURL", "NSError", "NSObject", "NSObjCRuntime", "NSGeometry", "NSThread", "NSRunLoop", "NSDate", "NSValue"] }
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKWebViewConfiguration", "WKNavigation", "WKPDFConfiguration", "block2"] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
block2 = "0.6"

[dev-dependencies]
tempfile.workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
