[package]
name = "lmt-adapter-total-station"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Total-station CSV adapter for LMT (M1)"

[dependencies]
lmt-core = { path = "../core" }
nalgebra.workspace = true
kiddo.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
csv = "1"
printpdf = "0.7"

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
tempfile = "3"
