[package]
name = "lmt-adapter-visual-ba"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Visual photogrammetry (ChArUco + BA) adapter for LMT (M2)"

[dependencies]
lmt-core = { path = "../core" }
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile = "3"
pretty_assertions.workspace = true

[[bin]]
name = "lmt-poc-compare"
path = "src/bin/poc_compare.rs"
