[package]
name = "lmt-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LED Mesh Toolkit core: IR, reconstruction, UV, export"

[dependencies]
nalgebra.workspace = true
kiddo.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
