[package]
name = "lmt-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LMT shared platform types: DTO, error model, sqlite data layer. Transport-agnostic; consumed by lmt-tauri and lmt-cli."

[dependencies]
lmt-core = { path = "../core" }
lmt-adapter-total-station = { path = "../adapter-total-station" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
